CSS Style is not recalculated when media attribute of style element is changed https://bugs.webkit.org/show_bug.cgi?id=96752

Patch by Alexander Shalamov <alexander.shalamov@intel.com> on 2012-10-09
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

When "media" attribute of style element is changed, style should be recalculated.
This patch modifies HTMLStyleElement::parseAttribute, so that when the media attribute
is updated, new MediaQuerySet is created and applied to the style element then, document
style is recalculated. Since media query set is updated for CSSStyleSheet, CSSOM wrapper
for media query should be updated as well in order to sync with new media query set value.

Test: fast/media/mq-js-update-media.html

* css/CSSStyleSheet.cpp:
(WebCore::CSSStyleSheet::setMediaQueries):
* html/HTMLStyleElement.cpp:
(WebCore::HTMLStyleElement::parseAttribute):

LayoutTests:

Added test to verify that when "media" attribute for style element is updated,
style is recalculated.

* fast/media/mq-js-update-media.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@130816 bbb929c8-8fbe-4397-9dbb-9b2b20218538