third_party/WebKit/Source/WebCore/css/CSSStyleSheet.cpp
@@ -204,6 +204,8 @@ void CSSStyleSheet::setDisabled(bool disabled)
 void CSSStyleSheet::setMediaQueries(PassRefPtr<MediaQuerySet> mediaQueries)
 {
     m_mediaQueries = mediaQueries;
+    if (m_mediaCSSOMWrapper && m_mediaQueries)
+        m_mediaCSSOMWrapper->reattach(m_mediaQueries.get());
 }
 
 unsigned CSSStyleSheet::length() const
