third_party/WebKit/Source/WebCore/html/HTMLStyleElement.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Event.h"
 #include "EventSender.h"
 #include "HTMLNames.h"
+#include "MediaList.h"
 #include "ScriptEventListener.h"
 #include "ScriptableDocumentParser.h"
 #include "ShadowRoot.h"
@@ -84,7 +85,10 @@ void HTMLStyleElement::parseAttribute(const Attribute& attribute)
     else if (attribute.name() == scopedAttr)
         scopedAttributeChanged(!attribute.isNull());
 #endif
-    else
+    else if (attribute.name() == mediaAttr && inDocument() && document()->renderer() && m_sheet) {
+        m_sheet->setMediaQueries(MediaQuerySet::createAllowingDescriptionSyntax(attribute.value()));
+        document()->styleResolverChanged(RecalcStyleImmediately);
+    } else
         HTMLElement::parseAttribute(attribute);
 }
 
